backend/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend # Sets Service name
  labels:
    app: backend # Labels and Selectores
spec:
  type: ClusterIP # Sets the Service
  ports:
    - port:8000 # Sets port number
  selector:
    app: backend
