backend/k8s/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend
spec:
  ingress:
    - ports:
        - port: 8000
          protocal: TCP
  podSelector:
    matchLabels:
      app: backend
  policyTypes:
    - Ingress
